testdata/baselines/reference/compiler/declarationEmitNoCrashOnCrossFileNode.errors.txt
declarationEmitNoCrashOnCrossFileNode(1,1): error TS1128: Declaration or statement expected.
declarationEmitNoCrashOnCrossFileNode(2,15): error TS1128: Declaration or statement expected.
declarationEmitNoCrashOnCrossFileNode(2,691): error TS1128: Declaration or statement expected.
declarationEmitNoCrashOnCrossFileNode(2,723): error TS1128: Declaration or statement expected.

==== declarationEmitNoCrashOnCrossFileNode (4 errors) ====
    
    ~
!!! error TS1128: Declaration or statement expected.
/index.ts(1,1): error TS1128: Declaration or statement expected.
/index.ts(1,16): error TS1128: Declaration or statement expected.
/index.ts(5,613): error TS1128: Declaration or statement expected.
/index.ts(5,645): error TS1128: Declaration or statement expected.

==== /index.ts (4 errors) ====
    import { foo } from './other';
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
                   ~~~~
!!! error TS1128: Declaration or statement expected.
    export class Foo {
        public bar = foo();
    }
/other.ts(1,1): error TS1128: Declaration or statement expected.
/other.ts(2,11): error TS1128: Declaration or statement expected.
/other.ts(5,1): error TS1128: Declaration or statement expected.
/other.ts(5,33): error TS1128: Declaration or statement expected.

==== /other.ts (4 errors) ====
    /**
    ~~~~~
!!! error TS1128: Declaration or statement expected.
     * Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eu aliquet lectus, nec rhoncus metus. Donec dapibus consectetur risus vitae porta. Aenean nisi neque, dignissim quis varius vel, volutpat vel tellus. Praesent lacinia molestie est, vel convallis odio ornare id. Pellentesque quis purus ante. Morbi a nisl justo. Etiam malesuada ipsum sem, fringilla rhoncus turpis ullamcorper et. Aenean laoreet, nisl id tempus pellentesque, elit elit congue felis, sit amet luctus nulla orci sit amet velit. Praesent non tincidunt nisi, at tempor eros. Quisque tincidunt euismod posuere. Ut blandit mauris elit, a porttitor orci aliquam ac. Duis imperdiet gravida ultrices. In.
              ~~~~
!!! error TS1128: Declaration or statement expected.
     */
    
    export function foo(): ({ a, b }: { a: string, b: string }) => void {
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
                                    ~
!!! error TS1128: Declaration or statement expected.
        return () => {}
    }
